# notepack

./: .gitignore  Cargo.toml  README.md  SPEC.md
benches/: decode.rs
src/: base62.rs  error.rs  lib.rs  main.rs  note.rs  parser.rs  stringtype.rs  varint.rs
