[package]
name = "notepack"
version = "0.1.0"
edition = "2024"
description = "A compact binary format and Rust library for encoding and decoding Nostr notes"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jb55/notepack"    # update this
homepage = "https://github.com/jb55/notepack"      # update if you have docs site
documentation = "https://docs.rs/notepack"
keywords = ["nostr", "serialization", "binary", "encoding"]
categories = ["encoding", "parsing", "cryptography"]

[dependencies]
serde_json = "1"
hex = "0.4.3"
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
