[package]
name = "notepack"
version = "0.3.0"
edition = "2024"
description = "A compact binary format and Rust library for encoding and decoding Nostr notes"
authors = ["William Casarin <jb55@jb55.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jb55/notepack"    # update this
homepage = "https://github.com/jb55/notepack"      # update if you have docs site
documentation = "https://docs.rs/notepack"
keywords = ["nostr", "serialization", "binary", "encoding"]
categories = ["encoding", "parsing", "cryptography"]

[dependencies]
serde_json = "1"
hex = "0.4.3"
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decode"
harness = false
